# privateAI-demo

./: .gitignore  Private AI Setup Instructions.md  README.md  pyproject.toml
mcp/: server.py
rag/: ingestData.py  testSearch.py
ui/: ui-app.py
